# logist_agent

./: .gitignore  COMPLETION.md  DEEPSEEK_RAG_TESTING.md  Dockerfile  Dockerfile.dev  Dockerfile.test  FEATURE4_DOCUMENTATION.md  FEATURE7_IMPLEMENTATION.md  RAG_DOCUMENTATION.md  RAG_TESTING_RESULTS.md  README.md  README_OLLAMA_INTEGRATION.md  README_PECOM_API.md  RUN_ENHANCED.md  TF-IDF-indexer.py  TF-IDF-vectorizer.py  agent.py  chek_rag.py  citations_test_20260417_151721.json  conversation_manager.py  conversations.db  conversations_test.db  current_task.md  deepseek_rag_test_20260415_120641.json  deepseek_rag_test_20260415_121840.json  design_architecture.md  docker-compose.yml  faiss_index  faiss_index.mapping  get_deepseek_key.py  history.md  index_metadata.json  indexer.py  llm_client.py  local_rag_chat.py  logsit.db  metadata.db  prd.md  pyproject.toml  quick_test.py  (+41 more)
app/: main.py
app/components/: chat.py  sidebar.py
app/handlers/: message_handler.py
carriers/: cdek.txt  pecom.txt  post_russia.txt  postanovlenie.txt
core/: agent.py  conversation_manager.py  summarizer.py  task_state.py
data/carriers/: pecom_api_doc.txt
docs/: API_KEYS.md  ARCHITECTURE.md  DEPLOYMENT.md  USER_GUIDE.md
documentation/: current_functionality.md  enhanced_features.md  implementation_report.md  prd.md  report.md
logsit_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
requirements/: core.txt  services.txt  web.txt
route_planner/: agent.py  app.py  enhanced_agent.py  enhanced_app.py  mcp_server.py  pecom_server.py
services/: mcp_orchestrator.py  rag_service.py
tests/: conftest.py
tests/integration/: test_app_integration.py  test_backward_compatibility.py
tests/unit/: test_config.py  test_conversation_manager.py  test_task_state.py
utils/: async_helpers.py  config.py  database.py
